--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ nav ul {
 
 .project-title {
     font-size: 1.5rem;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
  }
 
  .homepage {
