--- a/style.css
+++ b/style.css
@@ -82,68 +82,41 @@ nav ul {
     font-size: 16px;
 }
 
-.project-title {
-    font-size: 1.5rem;
-    /* text-transform: uppercase; */
- }
-
- .homepage {
+.homepage {
     width: 80vw;
     margin: 0 auto;
     align-items: center; 
- }
+}
 
- .majors {
+.majors {
     display: grid;
     grid-template-columns: 1fr 1fr;
     place-items: center;
     gap: 200px;
     padding: 75px 0;
- }
+}
 
- .project-title {
+.project-title {
     font-size: 40px;
-    font-weight: 800;
     letter-spacing: 1px;
     margin: 20px 0px;
 
-    color: #404040;
- }
+    /* color: #404040; */
+    color: #1B1B1B;
+}
 
- .project-text {
+.project-text {
     grid-column: 1/2;
     justify-content: left;
     align-items: center;
-    /* width: 80%; */
- }
-
- .product-image {
-    grid-column: 2/2;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
- }
-
- .majors .product-image:nth-child(1) {
-    background-color: #E3E9FE;
 }
 
-
-
- .product-image img {
-    width: 200px;
-    height: auto;
- }
-
- .tabs {
+.tabs {
     display: flex;
     gap: 20px;
- }
+}
 
- .role a {
+.role a {
     background-color: #F0F3F5;
     padding: 8px 15px;
     color: #68899C;
@@ -152,44 +125,14 @@ nav ul {
     text-transform: uppercase;
     letter-spacing: 1px;
     font-size: 14px;
- }
+}
 
- .product-description {
+.product-description {
     font-size: 20px;
     margin: 20px 0;
- }
+}
 
- footer {
-    background-color:#F0F3F5;
-    display: block;
-    margin: 0 auto;
-
- }
-
- .connect-wrapper {
-    text-align: left;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    place-items: center;
-    gap: 200px;
-    width: 80vw;
-    margin: 0 auto;
- }
-
- .connect {
-    width: 100%;
-    height: 100%;
- }
-
- .contact {
-    font-size: 24px;
- }
-
- .copyright {
-    text-align: center;
- }
-
- .view-project {
+.view-project {
     background-color: #68899C;
     border: none;
     padding: 10px 20px;
@@ -199,4 +142,77 @@ nav ul {
     font-size: 16px;
     letter-spacing: 2px;
     margin: 0 0 30px 0;
- }
+}
+
+.product-image {
+    grid-column: 2/2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    /* border-radius: 10px; */
+}
+
+.product-image img {
+    width: 200px;
+    height: auto;
+}
+
+.majors:nth-of-type(1) .product-image {
+    background-color: #E3E9FE;
+}
+
+.majors:nth-of-type(2) .product-image {
+    background-color: #FEF1E8;
+}
+
+.majors:nth-of-type(3) .product-image {
+    background-color: #DDE6EA;
+}
+
+
+
+footer {
+    background-color:#F0F3F5;
+    display: block;
+    margin: 0 auto;
+}
+
+.connect-wrapper {
+    text-align: left;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    place-items: center;
+    gap: 200px;
+    width: 80vw;
+    margin: 0 auto;
+    padding: 20px 0 50px 0;
+}
+
+.connect {
+    width: 100%;
+    height: 100%;
+}
+
+.contact {
+    font-size: 24px;
+}
+
+.links {
+    display: flex;
+    gap: 20px;
+
+    font-size: 18px;
+}
+
+.links a {
+    color: #68899C;
+
+    text-decoration: none;
+}
+
+.copyright {
+    text-align: center;
+}
+
