--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ nav ul {
 
 .product-description {
     font-size: 20px;
-    margin: 20px 0;
+    margin: 20px 0 40px 0;
 }
 
 .view-project {
@@ -164,7 +164,7 @@ nav ul {
 }
 
 .product-image img {
-    width: 200px;
+    width: 140px;
     height: auto;
 }
 
@@ -196,7 +196,7 @@ footer {
     gap: 200px;
     width: 80vw;
     margin: 0 auto;
-    padding: 20px 0 50px 0;
+    padding: 20px 0 40px 0;
 }
 
 .connect {
@@ -210,7 +210,7 @@ footer {
 
 .links {
     display: flex;
-    gap: 20px;
+    gap: 40px;
 
     font-size: 18px;
 }
