--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@ body {
     color: #404040;
 }
 
+
+/* HOMEPAGE */
+
 .navigation {
     display: flex;
     justify-content: space-between;
@@ -29,7 +32,13 @@ body {
 nav ul {
     list-style-type: none;
     display: flex;
-    gap: 2rem;
+    gap: 32px;
+}
+
+.contents ul li a {
+    text-decoration: none;
+    color: #FFFFFF;
+    font-size: 18px;
 }
 
 .hero {
@@ -61,12 +70,6 @@ nav ul {
 
 }
 
-.contents ul li a {
-    text-decoration: none;
-    color: #FFFFFF;
-    font-size: 18px;
-}
-
 .name{
     font-size: 60px;
     color: #FFFFFF;
@@ -85,7 +88,9 @@ nav ul {
 .homepage {
     width: 80vw;
     margin: 0 auto;
-    align-items: center; 
+    align-items: center;
+
+    margin-bottom: 50px;
 }
 
 .majors {
@@ -159,7 +164,7 @@ nav ul {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100%;
+    height: 400px;
     /* border-radius: 10px; */
 }
 
@@ -224,4 +229,3 @@ footer {
 .copyright {
     text-align: center;
 }
-
