--- a/style.css
+++ b/style.css
@@ -93,22 +93,21 @@ nav ul {
     margin-bottom: 50px;
 }
 
-.majors {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    place-items: center;
-    gap: 200px;
-    padding: 75px 0;
-}
-
 .project-title {
     font-size: 40px;
-    letter-spacing: 1px;
-    margin: 20px 0px;
-
+    letter-spacing: 2px;
+    margin: 0px 0px;
     color: #404040;
+
+    text-transform: uppercase;
+    font-weight: 800;
 }
 
+.tagline p {
+    margin: 0px 0px 30px 0;
+    font-size: 22px;
+    color: #5A5A5A;
+}
 .project-text {
     grid-column: 1/2;
     justify-content: left;
@@ -133,7 +132,7 @@ nav ul {
 .role a {
     background-color: #F0F3F5;
     padding: 8px 15px;
-    color: #68899C;
+    color: #004750;
     text-decoration: none;
     border-radius: 5px;
     text-transform: uppercase;
@@ -143,19 +142,23 @@ nav ul {
 
 .product-description {
     font-size: 20px;
-    margin: 20px 0 40px 0;
+    margin: 30px 0 30px 0;
 }
 
 .view-project {
-    background-color: #68899C;
+    background-color: #004750;
     border: none;
     padding: 10px 20px;
-    color: white;
-    text-transform: uppercase;
     border-radius: 5px;
+    margin: 0 0 30px 0;
+}
+
+.view-project a {
+    text-decoration: none;
+    text-transform: uppercase;
     font-size: 16px;
     letter-spacing: 2px;
-    margin: 0 0 30px 0;
+    color: white;
 }
 
 .product-image {
@@ -164,7 +167,7 @@ nav ul {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 400px;
+    height: 420px;
     /* border-radius: 10px; */
 }
 
@@ -182,7 +185,7 @@ nav ul {
 }
 
 .majors:nth-of-type(3) .product-image {
-    background-color: #DDE6EA;
+    background-color: #F9DAE0;
 }
 
 
@@ -228,4 +231,14 @@ footer {
 
 .copyright {
     text-align: center;
+}
+
+@media screen and (min-width: 720px) {
+    .majors {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            place-items: center;
+            gap: 200px;
+            padding: 75px 0;
+    }
 }
