--- a/project-items.css
+++ b/project-items.css
@@ -10,25 +10,27 @@ body {
 
 /* NAVIGATION */
 
-/* .cover {
+.cover{
     position: relative;
     height: 100vh;
     overflow: hidden;
-} */
-
-.penguin-logo img{
-    width: 75px;
-    height: auto;
 }
 
 .navigation {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: sticky;
+    top: 0;
     max-width: 80vw;
     margin: 0 auto;
 }
 
+.penguin-logo img {
+    width: 75px;
+    height: auto;
+
+}
 
 .projects-nav ul {
     list-style-type: none;
@@ -40,10 +42,11 @@ body {
 .projects-nav ul li a {
     text-decoration: none;
     font-size: 18px;
-    color: #68899C;
+    color: white;
+    z-index: 2;
 }
 
-.cover-image {
+.cover-image img {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -51,11 +54,92 @@ body {
     height: 100%;
     object-fit: cover;
     transform: translate(-50%, -50%);
-    z-index: -1;
+    z-index: -2;
 }
 
-.cover-image img {
+.cover-content {
+    position: relative;
+    z-index: 2;
+    color: white;
+    text-align: left;
+    padding: 150px;
+    max-width: 80vw;
+    margin-top: -60px;
+}
+
+
+.cover-logo img {
+    width: 150px;
+    height: auto;
+}
+
+
+/* OVERLAY */
+.cover::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    height: 100vh;
-    object-fit: cover;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3); /* Black with 50% transparency */
+    z-index: -1; /* Ensure it sits above the image but below the content */
+}
+
+
+
+
+/* FOOTER */
+footer {
+    background-color:#F0F3F5;
+    display: block;
+    margin: 0 auto;
+}
+
+.connect-wrapper {
+    text-align: left;
+    width: 80vw;
+    margin: 0 auto;
+    padding: 20px 0 20px 0;
+}
+
+.connect {
+    width: 100%;
+    height: 100%;
+    margin: 20px 0px 20px 0px;
+}
+
+.contact {
+    font-size: 24px;
+    margin: 10px 0px;
+}
+
+.links {
+    display: flex;
+    gap: 40px;
+
+    font-size: 18px;
+}
+
+.links a {
+    color: #68899C;
+    text-decoration: none;
+}
+
+.copyright {
+    text-align: left;
+    max-width: 80vw;
+    margin: 0 auto;
+    padding: 20px 0;
+}
+
+@media screen and (min-width: 800px) {
+    .connect-wrapper {
+        display: grid;
+        gap: 500px;
+        grid-template-columns: 1fr 1fr;
+        place-items: center;
+        padding: 30px 0 20px 0;
+    }
+
 }
