--- a/style.css
+++ b/style.css
@@ -14,6 +14,12 @@ body {
 
 /* HOMEPAGE */
 
+.hero {
+    position: relative;
+    height: 100vh;
+    overflow: hidden;
+}
+
 .navigation {
     display: flex;
     justify-content: space-between;
@@ -41,13 +47,6 @@ nav ul {
     font-size: 18px;
 }
 
-.hero {
-    position: relative;
-    height: 100vh;
-    overflow: hidden;
-
-}
-
 .hero-video {
     position: absolute;
     top: 50%;
@@ -64,10 +63,9 @@ nav ul {
     z-index: 1;
     color: white;
     text-align: center;
-    padding: 150px;
     max-width: 80vw;
-    align-items: center;
-
+    margin: 0 auto;
+    padding: 100px 0;
 }
 
 .name{
@@ -85,12 +83,19 @@ nav ul {
     font-size: 16px;
 }
 
+
+
+/* MAIN */
 .homepage {
     width: 80vw;
     margin: 0 auto;
     align-items: center;
 
     margin-bottom: 50px;
+}
+
+.majors {
+    padding: 50px 0;
 }
 
 .project-title {
@@ -188,8 +193,6 @@ nav ul {
     background-color: #F9DAE0;
 }
 
-
-
 footer {
     background-color:#F0F3F5;
     display: block;
@@ -198,22 +201,20 @@ footer {
 
 .connect-wrapper {
     text-align: left;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    place-items: center;
-    gap: 200px;
     width: 80vw;
     margin: 0 auto;
-    padding: 20px 0 40px 0;
+    padding: 20px 0 20px 0;
 }
 
 .connect {
     width: 100%;
     height: 100%;
+    margin: 20px 0px 20px 0px;
 }
 
 .contact {
     font-size: 24px;
+    margin: 10px 0px;
 }
 
 .links {
@@ -225,24 +226,34 @@ footer {
 
 .links a {
     color: #68899C;
-
     text-decoration: none;
 }
 
 .copyright {
-    text-align: center;
+    text-align: left;
+    max-width: 80vw;
+    margin: 0 auto;
+    padding: 20px 0;
 }
 
-@media screen and (min-width: 720px) {
+
+
+/* MEDIA QUERY */
+@media screen and (min-width: 800px) {
     .majors {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            place-items: center;
-            gap: 200px;
-            padding: 75px 0;
+        display: grid;
+        gap: 200px;
+        grid-template-columns: 1fr 1fr ;
+    }
+
+    .connect-wrapper {
+        display: grid;
+        gap: 200px;
+        grid-template-columns: 1fr 1fr;
+        place-items: center;
+        padding: 30px 0 20px 0;
     }
 }
-
 
 /* scroll down */
 .scroll-down {
