--- a/project-items.css
+++ b/project-items.css
@@ -22,7 +22,7 @@ body {
     align-items: center;
     position: sticky;
     top: 0;
-    max-width: 80vw;
+    max-width: 90vw;
     margin: 0 auto;
 }
 
@@ -46,6 +46,8 @@ body {
     z-index: 2;
 }
 
+/* COVER */
+
 .cover-image img {
     position: absolute;
     top: 50%;
@@ -62,17 +64,26 @@ body {
     z-index: 2;
     color: white;
     text-align: left;
-    padding: 150px;
-    max-width: 80vw;
-    margin-top: -60px;
+    max-width: 90vw;
+    margin: 100px auto;
 }
-
 
 .cover-logo img {
     width: 150px;
     height: auto;
+
+    margin: 0px 0px 50px 0px;
 }
 
+.cover-subtitle h3 {
+    font-size: 14px;
+    margin: 5px 0px;
+}
+
+.cover-details p {
+    font-size: 18px;
+    margin: 5px 0px 30px 0px;
+}
 
 /* OVERLAY */
 .cover::before {
@@ -82,7 +93,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.3); /* Black with 50% transparency */
+    background-color: rgba(0, 0, 0, 0.5); /* Black with 50% transparency */
     z-index: -1; /* Ensure it sits above the image but below the content */
 }
 
@@ -98,7 +109,7 @@ footer {
 
 .connect-wrapper {
     text-align: left;
-    width: 80vw;
+    width: 90vw;
     margin: 0 auto;
     padding: 20px 0 20px 0;
 }
@@ -128,11 +139,12 @@ footer {
 
 .copyright {
     text-align: left;
-    max-width: 80vw;
+    max-width: 90vw;
     margin: 0 auto;
     padding: 20px 0;
 }
 
+/* MEDIA QUERY */
 @media screen and (min-width: 800px) {
     .connect-wrapper {
         display: grid;
@@ -141,5 +153,4 @@ footer {
         place-items: center;
         padding: 30px 0 20px 0;
     }
-
 }
