--- a/projects.css
+++ b/projects.css
@@ -18,7 +18,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-width: 80vw;
+    max-width: 90vw;
     margin: 0 auto;
     position: sticky;
     top: 0;
@@ -46,7 +46,7 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr;
 
-    width: 80vw;
+    width: 90vw;
     margin: 0 auto;
     align-items: center;
 
@@ -108,22 +108,20 @@ footer {
 
 .connect-wrapper {
     text-align: left;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    place-items: center;
-    gap: 200px;
-    width: 80vw;
+    width: 90vw;
     margin: 0 auto;
-    padding: 20px 0 40px 0;
+    padding: 20px 0 20px 0;
 }
 
 .connect {
     width: 100%;
     height: 100%;
+    margin: 20px 0px 20px 0px;
 }
 
 .contact {
     font-size: 24px;
+    margin: 10px 0px;
 }
 
 .links {
@@ -135,10 +133,23 @@ footer {
 
 .links a {
     color: #68899C;
-
     text-decoration: none;
 }
 
 .copyright {
-    text-align: center;
+    text-align: left;
+    max-width: 90vw;
+    margin: 0 auto;
+    padding: 20px 0;
+}
+
+/* MEDIA QUERY */
+@media screen and (min-width: 800px) {
+    .connect-wrapper {
+        display: grid;
+        gap: 500px;
+        grid-template-columns: 1fr 1fr;
+        place-items: center;
+        padding: 30px 0 20px 0;
+    }
 }
