--- a/project-items.css
+++ b/project-items.css
@@ -48,6 +48,10 @@ body {
 
 /* COVER */
 
+.cover {
+    margin-bottom: 50px;
+}
+
 .cover-image img {
     position: absolute;
     top: 50%;
@@ -93,12 +97,23 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Black with 50% transparency */
+    background-color: rgba(0, 0, 0, 0.8); /* Black with 50% transparency */
     z-index: -1; /* Ensure it sits above the image but below the content */
 }
 
+/* MAIN */
 
+.side-nav {
+    display: none;
+}
 
+.main-content {
+    width: 90vw;
+    margin: 0 auto;
+    align-items: center;
+
+    margin-bottom: 50px;
+}
 
 /* FOOTER */
 footer {
@@ -144,13 +159,83 @@ footer {
     padding: 20px 0;
 }
 
-/* MEDIA QUERY */
+
+
+
+
+
+/* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
+/* MEDIA QUERY ********************************************************** */
 @media screen and (min-width: 800px) {
+    .side-nav {
+        display: block;
+        align-self: start;
+        position: sticky;
+        top: 0;
+        height: max-content;
+        z-index: 10;
+    }
+
+    .nav-wrapper {
+        margin-bottom: 50px;
+    }
+
+    .title-nav {
+        margin: 20px 0px 10px 0px;
+    }
+
+    .container-nav ul {
+        margin: 0;
+        padding: 0;
+
+        list-style-type: none;
+    }
+
+    .container-nav ul li {
+        margin: 5px 0px;
+    }
+
+    .container-nav ul li a {
+        text-decoration: none;
+        font-size: 20px;
+
+        color:#68899C;
+    }
+
+    .main-content {
+        display: grid;
+        gap: 50px;
+        grid-template-columns: 150px 1fr;
+
+        max-width: 90vw;
+    }
+
+    .right-nav {
+        align-self: start;
+    }
+
+
     .connect-wrapper {
         display: grid;
         gap: 500px;
         grid-template-columns: 1fr 1fr;
         place-items: center;
         padding: 30px 0 20px 0;
+    }
+}
+
+/* for viewport */
+@media screen and (min-width: 1000px) {
+    .navigation {
+        max-width: 80vw;
+    }
+    .cover-content {
+        max-width: 80vw;
+    }
+    .main-content {
+        max-width: 80vw;
+    }
+    .connect-wrapper {
+        max-width: 80vw;
     }
 }
