--- a/about.css
+++ b/about.css
@@ -47,12 +47,12 @@ nav ul {
 
 .projects-nav ul li a {
     text-decoration: none;
-    color: #FFFFFF ;
+    color: #004750;
     font-size: 18px;
 }
 ß
 .projects-nav ul li a:hover {
-    color: #004750;
+    color: #68899C;
 }
 
 .menu-button:hover {
@@ -105,154 +105,24 @@ nav ul {
     z-index: 100;
 }
 
-.hero-video {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transform: translate(-50%, -50%);
-    z-index: -1;
-}
-
-.hero-content {
-    position: relative;
-    z-index: 1;
-    color: white;
-    text-align: center;
-    max-width: 90vw;
-    margin: 0 auto;
-    padding: 100px 0;
-}
-
-.name{
-    font-size: 60px;
-    color: #FFFFFF;
-    margin: 20px 0;
-}
-
-.bio {
-    font-size: 20px;
-    margin: 20px 0 10px 0;
-}
-
-.location {
-    font-size: 16px;
-}
-
 
 
 /* MAIN */
-.homepage {
-    width: 90vw;
+.about-section {
     margin: 0 auto;
-    align-items: center;
+    max-width: 90vw;
 
-    margin-bottom: 50px;
+    padding-bottom: 100px;
 }
 
-.majors {
-    padding: 50px 0;
+.profile img {
+    width: 400px;
+    margin-bottom: 30px;
 }
 
-.project-title {
-    font-size: 40px;
-    letter-spacing: 2px;
-    margin: 0px 0px;
-    color: #404040;
 
-    text-transform: uppercase;
-    font-weight: 800;
-}
-
-.tagline p {
-    margin: 0px 0px 30px 0;
-    font-size: 22px;
-    color: #5A5A5A;
-}
-.project-text {
-    grid-column: 1/2;
-    justify-content: left;
-    align-self: center;
-}
-
-.majors:nth-of-type(2) .product-image {
-    grid-column: 1/2;
-    grid-row: 1;
-}
-
-.majors:nth-of-type(2) .project-text {
-    grid-column: 2/2;
-    grid-row: 1;
-}
-
-.tabs {
-    display: flex;
-    gap: 20px;
-}
-
-.role a {
-    background-color: #F0F3F5;
-    padding: 8px 15px;
-    color: #536E7D;
-    text-decoration: none;
-    border-radius: 5px;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    font-size: 14px;
-}
-
-.product-description {
+.about-section p {
     font-size: 20px;
-    margin: 30px 0 30px 0;
-}
-
-.view-project {
-    background-color: #536E7D;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    margin: 0 0 30px 0;
-}
-
-.view-project a {
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 16px;
-    letter-spacing: 2px;
-    color: white;
-}
-
-.view-project:hover {
-    background-color: #004750;
-}
-
-.product-image {
-    grid-column: 2/2;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 420px;
-    /* border-radius: 10px; */
-}
-
-.product-image img {
-    width: 140px;
-    height: auto;
-}
-
-.majors:nth-of-type(1) .product-image {
-    background-color: #E3E9FE;
-}
-
-.majors:nth-of-type(2) .product-image {
-    background-color: #FEF1E8;
-}
-
-.majors:nth-of-type(3) .product-image {
-    background-color: #F9DAE0;
 }
 
 footer {
@@ -367,10 +237,13 @@ footer {
     .navigation {
         max-width: 80vw;
     }
-    .homepage{
-        max-width: 80vw;
+    .about-section {
+        max-width: 60vw;
     }
     .connect-wrapper {
         max-width: 80vw;
+    }
+    .profile img {
+        width: 900px;
     }
 }
