--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
     align-items: center;
     position: sticky;
     top: 0;
-    max-width: 90vw;
+    max-width: 80vw;
     margin: 0 auto;
 }
 
@@ -121,7 +121,7 @@ nav ul {
     z-index: 1;
     color: white;
     text-align: center;
-    max-width: 90vw;
+    max-width: 70vw;
     margin: 0 auto;
     padding: 100px 0;
 }
@@ -133,14 +133,13 @@ nav ul {
 }
 
 .bio {
-    font-size: 20px;
+    font-size: 28px;
     margin: 20px 0 10px 0;
 }
 
 .location {
-    font-size: 16px;
+    font-size: 20px;
 }
-
 
 
 /* MAIN */
@@ -365,12 +364,18 @@ footer {
 
 @media screen and (min-width: 1000px) {
     .navigation {
-        max-width: 80vw;
+        max-width: 70vw;
     }
     .homepage{
-        max-width: 80vw;
+        max-width: 70vw;
     }
     .connect-wrapper {
-        max-width: 80vw;
+        max-width: 70vw;
+    }
+
+    .bio {
+        max-width: 50vw;
+        align-items: center;
+        margin: 0 auto;
     }
 }
