--- a/projects.css
+++ b/projects.css
@@ -2,7 +2,7 @@ body {
     line-height: 1.5;
     margin: 0;
     padding: 0;
-    font-family: 'Lato', sans-serif;
+    font-family: "alwyn-new-rounded-web", sans-serif;
     background-color: white;
     color: #404040;
 }
