--- a/project-items.css
+++ b/project-items.css
@@ -157,7 +157,7 @@ body {
 
 /* FOOTER */
 footer {
-    background-color:#F0F3F5;
+    background-color:#E1E7EB;
     display: block;
     margin: 0 auto;
 }
