--- a/about.css
+++ b/about.css
@@ -126,7 +126,7 @@ nav ul {
 }
 
 footer {
-    background-color:#F0F3F5;
+    background-color:#E1E7EB;
     display: block;
     margin: 0 auto;
 }
