--- a/projects.css
+++ b/projects.css
@@ -58,45 +58,38 @@ header {
 /********************************************** CATEGORIES */
 .project-categories {
     margin: 0 auto;
-}
-
-.categories ul {
-    list-style-type: none;
+    max-width: 90vw;
     display: flex;
-    padding: 0;
-    margin: 0;
-
     justify-content: space-between;
+    gap: 20px;
 }
 
-.categories ul li {
-    max-width: 20vw;
-}
-
-.categories ul li button {
-    width: 200px;
+.project-categories button {
+    flex: 1 1 250px;
     border-radius: 5px;
     border: 1px solid #004750;
     background-color: #FFFFFF;
+    cursor: pointer;
 }
 
-.categories ul li button:hover {
+.project-categories button:hover,
+.project-categories button.active {
     background-color: #004750;
-
-    > a {
+    > span {
         color: #FFFFFF;
     }
 }
 
-.categories ul li button a {
+.project-categories button span {
     text-decoration: none;
     font-size: 18px;
     color: #004750;
     text-transform: uppercase;
 }
 
-
-
+.show {
+    display: block !important;
+}
 
 /* MAIN */
 .project-items {
@@ -158,6 +151,7 @@ header {
 .project-link {
     position: relative; 
     overflow: hidden;
+    display: none;
 }
 
 /* Add the blur overlay and text using ::after */
