--- a/projects.css
+++ b/projects.css
@@ -24,7 +24,6 @@ header {
     align-items: center;
     max-width: 90vw;
     margin: 0 auto;
-    position: sticky;
     top: 0;
 }
 
@@ -61,18 +60,27 @@ header {
     max-width: 90vw;
     display: flex;
     justify-content: space-between;
-    gap: 20px;
+    gap: 30px;
+    padding-bottom: 30px;
 }
 
 .project-categories button {
     flex: 1 1 250px;
     border-radius: 5px;
-    border: 1px solid #004750;
+    border: 1px solid #68899C;
     background-color: #FFFFFF;
     cursor: pointer;
+    padding: 10px;
+    font-family: "alwyn-new-rounded-web", sans-serif;
 }
 
-.project-categories button:hover,
+.project-categories button:hover {
+    background-color: #68899C;
+    > span {
+        color: #FFFFFF;
+    }
+}
+
 .project-categories button.active {
     background-color: #004750;
     > span {
@@ -82,7 +90,7 @@ header {
 
 .project-categories button span {
     text-decoration: none;
-    font-size: 18px;
+    font-size: 16px;
     color: #004750;
     text-transform: uppercase;
 }
@@ -91,6 +99,8 @@ header {
     display: block !important;
 }
 
+
+
 /* MAIN */
 .project-items {
     max-width: 90vw;
@@ -98,7 +108,7 @@ header {
     align-items: center;
 
     padding-top: 50px;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
 }
 
 .project-image {
@@ -107,6 +117,7 @@ header {
     align-items: center;
     width: 100%;
     height: 350px;
+    border-radius: 10px;
 }
 
 .project-image img {
@@ -176,6 +187,7 @@ header {
     justify-content: center;
     align-items: center;
     pointer-events: none; /* Prevent overlay from being interactive */
+    border-radius: 10px;
 }
 
 /* Show the overlay and text on hover */
@@ -240,6 +252,12 @@ footer {
     .project-items {
         display: grid;
         grid-template-columns: 1fr 1fr;
+
+        gap: 50px;
+    }
+
+    .menu-button {
+        display: none;
     }
 
     .project-image {
