--- a/project-items.css
+++ b/project-items.css
@@ -146,7 +146,7 @@ body {
     margin-bottom: 50px;
 }
 
-.competitive-analysis img, .screens img, .branding img {
+.competitive-analysis img, .screens img, .branding img, .linkedin img, .one-pager img {
     width: 400px;
     height: auto;
     margin: 0 auto;
