--- a/css/project-items.css
+++ b/css/project-items.css
@@ -103,14 +103,30 @@ h1 {
     margin: 20px auto;
 }
 h2 {
-    margin: 20px 0 20px 0;
+    margin: 20px 0;
 }
 .cover-title {
     color: #003940;
     font-size: 24px;
     font-family: "museo-sans-rounded", sans-serif;
     font-weight: 700;
+
+    display: flex;
+    flex-direction: row;
+    place-items: center;
+    gap: 8px;
 }
+
+.cover-title a {
+    color: #003940;
+}
+
+.cover-title i:hover {
+    color: #81B6BF;
+    cursor: pointer;
+
+}
+
 .cover-image img {
     /* position: absolute; */
     top: 50%;
@@ -125,39 +141,19 @@ h2 {
     color: black;
     font-family: "museo-sans-rounded", sans-serif;
     font-weight: 700;
-    font-size: 16px;
+    font-size: 14px;
     margin: 0px 0px;
+    text-transform: uppercase;
 }
 .cover-details p {
     font-size: 16px;
     margin: 0px 0px 10px 0px;
 }
 .cover-description {
-    margin: 20px auto;
+    margin: 20px auto 50px auto;
 }
 
-/* about project */
-.side-nav {
-    display: none;
-}
-.content h4 {
-    font-family: "museo-sans-rounded", sans-serif;
-    font-weight: 700;
-    color: black;
-    font-size: 18px;
-    margin: 20px 0 0px 0;
-}
-.content p {
-    margin: 10px 0px 20px 0;
-}
-.sub-parts {
-    margin: 0 0 0 20px;
-}
-.screens h4, .branding h4 {
-    margin: 20px 0 10px 0px;
-    font-size: 18px;
-}
-
+/* project */
 .main-content {
     width: 90vw;
     margin: 0 auto;
@@ -166,39 +162,121 @@ h2 {
     margin-bottom: 50px;
 }
 
-.sub-parts img, .screens img, .branding img, .linkedin img, .one-pager img {
-    width: 400px;
-    height: auto;
-    margin: 0 auto;
-    text-align: center;
-    align-items: center;
+.category {
+    padding-bottom: 40px;
+    margin-bottom: 40px;
+    border-bottom: 1px solid lightgray;
 }
 
-.user-persona img {
-    width: 400px;
-    height: auto;
+.side-nav {
+    display: none;
 }
 
-.container-design img {
-    width: 400px;
+.category-nav-title {
+    font-family: "museo-sans-rounded", sans-serif;
+    font-weight: 700;
+    color: #003940;
+    font-size: 32px;
+    margin-top: 40px;
+}
+.content-sub {
+    font-family: "museo-sans-rounded", sans-serif;
+    font-weight: 700;
+    color: black;
+    font-size: 20px;
+    margin: 20px 0 0 0;
+}
+.content p {
+    font-size: 16px;
+    margin: 10px 0px 20px 0;
 }
 
-
-/* .content .container-wireframe {
-    background-color: pink;
-} */
-
-.container-wireframe img {
+/* TIMELINE */
+.timeline-images {
     display: flex;
+    flex-direction: column;
+    padding: 20px;
+    background-color: #F9FAFF;
+    border-radius: 10px;
+}
+.image {
+    display: flex;
+    place-content: center;
     place-items: center;
-    width: 400px;
+    height: 300px;
+}
+.image img {
+    border-radius: 5px;
+    width: 90%;
+    height: 90%;
+    object-fit: cover;
 }
 
-.container-mockups img {
+/* SUB-PARTS */
+.solutions, .user-interviews, .user-personas, .competitor-analysis, .low-fidelity, .high-fidelity {
     display: flex;
+    flex-direction: row;
     place-items: center;
-    width: 400px;
+    gap: 5px;
 }
+.sub-parts h6 {
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+}
+
+.persona {
+    margin: 20px 0;
+    padding: 20px 0;
+    border-radius: 10px;
+    background-color: #F9FAFF;
+    display: flex;
+    flex-direction: column;
+    place-content: center;
+    place-items: center;
+    gap: 20px;
+}
+
+.persona img, .competitor img, .userflow-image img {
+    width: 90%;
+    height: auto;
+}
+
+.competitor {
+    margin: 20px 0;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: #5D1CFF;
+    display: flex;
+    flex-direction: column;
+    place-content: center;
+    place-items: center;
+}
+
+.userflow-image, .hi-fi-wireframes {
+    margin: 20px 0;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: #F9FAFF;
+    display: flex;
+    flex-direction: column;
+    place-content: center;
+    place-items: center;
+}
+
+.lo-fi-wireframes img, .hi-fi-wireframes img {
+    margin: 10px 0;
+    width: 100%;
+    height: auto;
+}
+
+.screens h6 {
+    text-transform: uppercase;
+    color: black;
+    letter-spacing: 2px;
+    margin: 20px 0;
+}
+
 
 /* FOOTER */
 footer {
@@ -276,6 +354,30 @@ footer {
     .main-nav ul li a:hover {
         color: #68899C;
     }
+
+
+
+
+    .timeline-images {
+        display: flex;
+        flex-direction: row;
+        padding: 20px;
+        background-color: #F9FAFF;
+        border-radius: 10px;
+    }
+    
+    .image {
+        display: flex;
+        place-content: center;
+        place-items: center;
+        height: 300px;
+    }
+    
+    .image img {
+        width: 85%;
+        height: 85%;
+        object-fit: cover;
+    }
     
 
     /* .cover-content {
@@ -307,7 +409,14 @@ footer {
 
 /* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
 /* MEDIA QUERY ********************************************************** */
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 990px) {
+
+
+
+
+
+
+
     .side-nav {
         display: block;
         align-self: start;
