removed padding top of h2

--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ body {
     font-weight: 700;
     font-size: 44px;
     color: #003940;
-    margin: 20px 0;
+    margin: 0 0 20px 0;
 }
 .bio {
     font-size: 20px;
