--- a/css/project-items.css
+++ b/css/project-items.css
@@ -240,6 +240,7 @@ h2 {
 .persona img, .competitor img, .userflow-image img {
     width: 90%;
     height: auto;
+    object-fit: cover;
 }
 
 .competitor {
@@ -268,6 +269,7 @@ h2 {
     margin: 10px 0;
     width: 100%;
     height: auto;
+    object-fit: cover;
 }
 
 .screens h6 {
