--- a/css/project-items.css
+++ b/css/project-items.css
@@ -238,9 +238,8 @@ h2 {
 }
 
 .persona img, .competitor img, .userflow-image img {
-    width: 90%;
+    max-width: 90%;
     height: auto;
-    object-fit: cover;
 }
 
 .competitor {
@@ -267,9 +266,8 @@ h2 {
 
 .lo-fi-wireframes img, .hi-fi-wireframes img {
     margin: 10px 0;
-    width: 100%;
+    max-width: 100%;
     height: auto;
-    object-fit: cover;
 }
 
 .screens h6 {
