--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,7 @@ body {
     display: none;
 }
 
-/* PROJECTS */
+/* projects */
 .projects {
     padding: 20px 0;
 }
@@ -169,7 +169,7 @@ body {
     background-color: #FFF6F8;
 }
 
-/* CATEGORY TABS */
+/* category tabs */
 .category-tabs {
     display: flex;
     flex-wrap: wrap;
@@ -187,7 +187,7 @@ body {
     margin: 0;
 }
 
-/* VIEW PROJECT BUTTON */
+/* view project button */
 .view-project {
     border: none;
     width: 100%;
@@ -226,7 +226,7 @@ body {
     object-fit: cover;
 }
 
-/* FOOTER */
+/* footer */
 footer {
     background-color: #FBFDFD;
     display: block;
@@ -241,7 +241,7 @@ footer {
 }
 .contactme-title {
     font-family: "museo-sans-rounded", sans-serif;
-    font-size: 32px;
+    font-size: 24px;
     margin: 10px 0px;
     color: #003940;
 }
@@ -249,7 +249,7 @@ footer {
     display: flex;
     gap: 40px;
 
-    font-size: 18px;
+    font-size: 16px;
 }
 .links a {
     color: #003940;
@@ -261,7 +261,7 @@ footer {
     transition: ease-in-out 0.2s;
 }
 .links a:hover {
-    color: #81B6BF;
+    color: #186973;
 }
 
 
@@ -297,36 +297,6 @@ footer {
     .penguin-logo img{
         width: 60px;
         height: auto;
-    }
-
-    /* NAVIGATION */
-    .nav-button {
-        display: none;
-    }
-
-    .main-nav {
-        display: flex;
-    }
-
-    .main-nav ul {
-        list-style-type: none;
-        display: flex;
-        gap: 32px;
-    }
-
-    .main-nav ul li a {
-        font-family: "museo-sans-rounded", sans-serif;
-        text-decoration: none;
-        color: #004750 ;
-        font-size: 18px;
-    }
-
-    .main-nav ul li a:hover {
-        color: #68899C;
-    }
-
-    .main-nav ul li a:active {
-        color: #FFFFFF;
     }
     
     .hero-content {
@@ -380,7 +350,7 @@ footer {
     }
 
     .project-description {
-        font-size: 20px;
+        font-size: 18px;
         margin: 20px 0;
     }
 
@@ -435,6 +405,19 @@ footer {
         background-color: #55707f;
         transform: translateY(-2px);
     }
+
+    .contactme-section {
+        gap: 200px;
+    }
+
+    .contactme-section h3 {
+        font-size: 32px;
+    }
+
+    .links {
+        font-size: 20px;
+        font-weight: semibold;
+    }
     
 }
 
@@ -443,11 +426,6 @@ footer {
 /* MQ 768px */
 @media screen and (min-width: 768px) {
     /* VIEWPORT */
-    .main-header, .projects-wrapper, .contactme-section {
-        width: 80vw;
-        margin: 0 auto;
-    }
-
     .hero-content {
         max-width: 70vw;
     }
@@ -475,7 +453,37 @@ footer {
         color: black;
     }
 
+      /* NAVIGATION */
+    .nav-button {
+        display: none;
+    }
 
+    .main-nav {
+        display: flex;
+    }
+
+    .main-nav ul {
+        list-style-type: none;
+        display: flex;
+        gap: 32px;
+    }
+
+    .main-nav ul li a {
+        font-family: "museo-sans-rounded", sans-serif;
+        text-decoration: none;
+        color: #004750 ;
+        font-size: 18px;
+    }
+
+    .main-nav ul li a:hover {
+        color: #186973;
+    }
+
+    .main-nav ul li a:active {
+        color: #FFFFFF;
+    }
+
+}
 
 
 
@@ -496,15 +504,6 @@ footer {
         min-height: 100vh;             /* Full screen height */
         scroll-snap-align: start;
         box-sizing: border-box;
-        }
-
-
-        /* position:fixed;
-        padding:0;
-        margin:0;
-
-        top:0;
-        left:0; */
     }
 
     .project-content, .view-project {
@@ -540,80 +539,19 @@ footer {
         place-items: center;
         padding: 30px 0 20px 0;
     }
+
+    .contactme-section {
+        gap: 200px;
+    }
+
+    .contactme-section h3 {
+        font-size: 32px;
+    }
 }
 
-
-
-
-
-
-
-
-
-/* MEDIA QUERY */
-/* @media screen and (min-width: 1000px) {
-    .main-header {
-        max-width: 70vw;
-    }
-    .homepage{
-        max-width: 70vw;
-    }
-    .contactme-section {
-        max-width: 70vw;
-    }
-
-    .bio {
-        max-width: 60vw;
-        align-items: center;
+@media screen and (min-width: 1599px) {
+    .main-header, .projects-wrapper, .contactme-section {
+        width: 80vw;
         margin: 0 auto;
     }
-
-
-    .name{
-        font-size: 70px;
-    }
-    
-    .bio {
-        font-size: 28px;
-    }
-    
-    .location {
-        font-size: 24px;
-    }
-} */
-
-
-
-/* @media screen and (min-width: 800px) {
-
-    .main-nav {
-        display: block;
-    }
-
-    .nav-button {
-        display: none;
-    }
-
-    .projects {
-        display: grid;
-        gap: 50px;
-        grid-template-columns: 1fr 1fr ;
-    }
-} */
-/* 
-@media screen and (min-width: 1300px) {
-
-    .projects {
-        display: grid;
-        gap: 150px;
-        grid-template-columns: 1fr 1fr ;
-    }
-
-    .contactme-section {
-        display: grid;
-        gap: 200px;
-        grid-template-columns: 1fr 1fr;
-        place-items: center;
-        padding: 30px 0 20px 0;
-    }
-} */
+}
